--- a/planesmith/app/src/main/res/layout/activity_main.xml
+++ b/planesmith/app/src/main/res/layout/activity_main.xml
@@ -37,8 +37,7 @@
             android:layout_alignParentEnd="true"
             android:layout_marginTop="25dp"
             android:layout_marginEnd="220dp"
-            android:background="#A3A2A2"
-            android:backgroundTint="#A3A2A2"
+            android:background="@color/colorPrimaryDark"
             android:backgroundTintMode="add"
             android:text="@string/plus" />
     </RelativeLayout>
