--- a/planesmith/app/src/main/res/layout/landing.xml
+++ b/planesmith/app/src/main/res/layout/landing.xml
@@ -18,7 +18,10 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
             android:text="Story Name"
             android:textColor="#000"
             android:textSize="25sp" />
@@ -36,7 +39,7 @@
             android:layout_width="match_parent"
             android:layout_height="223dp"
             android:layout_marginTop="1dp"
-            app:srcCompat="@drawable/ic_launcher_background"/>
+            app:srcCompat="@drawable/ic_launcher_background" />
 
         <TextView
             android:id="@+id/synopsis"
@@ -71,7 +74,7 @@
             android:background="@color/white"
             android:text="@string/characters"
             android:textAlignment="textStart"
-            android:textColor="@color/black"
+            android:textColor="#fff"
             android:textSize="15sp" />
 
         <Button
@@ -83,7 +86,7 @@
             android:background="@color/white"
             android:text="@string/world"
             android:textAlignment="textStart"
-            android:textColor="@color/black"
+            android:textColor="#fff"
             android:textSize="15sp" />
 
         <Button
@@ -95,7 +98,7 @@
             android:background="@color/white"
             android:text="@string/story"
             android:textAlignment="textStart"
-            android:textColor="@color/black"
+            android:textColor="#fff"
             android:textSize="15sp" />
     </RelativeLayout>
 </RelativeLayout>
