--- a/planesmith/app/src/main/res/layout/characters.xml
+++ b/planesmith/app/src/main/res/layout/characters.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -9,7 +10,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:background="#ccc"
-        android:gravity="left">
+        android:gravity="left"
+        tools:ignore="MissingConstraints">
 
         <TextView
             android:layout_width="wrap_content"
