--- a/planesmith/app/src/main/res/values/colors.xml
+++ b/planesmith/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#3b3b3b</color>
     <color name="colorAccent">#878787</color>
     <color name="white">#fff</color>
+    <color name="black">#000</color>
 </resources>
