--- a/planesmith/app/src/main/res/layout/story_chapter.xml
+++ b/planesmith/app/src/main/res/layout/story_chapter.xml
@@ -13,39 +13,48 @@
         android:background="#ccc"
         android:gravity="left">
 
-
-        <EditText
-            android:id="@+id/chapter_name"
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:hint="Chapter Name"
+            android:layout_margin="10dp"
+            android:text="Story"
             android:textColor="#000"
-            android:textSize="20sp"
-            tools:layout_editor_absoluteY="129dp" />
+            android:textSize="25sp" />
     </RelativeLayout>
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="700dp"
-        app:layout_constraintBottom_toBottomOf="parent">
+    <EditText
+        android:id="@+id/noteTitle"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:ems="10"
+        android:hint="Enter Title"
+        android:inputType="textPersonName"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/header" />
 
-        <EditText
-            android:id="@+id/noteDetails"
-            style="@style/Widget.AppCompat.AutoCompleteTextView"
-            android:layout_width="394dp"
-            android:layout_height="684dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
-            android:background="@null"
-            android:ems="10"
-            android:gravity="start|top"
-            android:hint="Enter Details"
-            android:inputType="textMultiLine"
-            android:textColorHighlight="#FFFFFF"
-            android:textColorLink="#FFFFFF" />
-    </RelativeLayout>
+    <EditText
+        android:id="@+id/noteDetails"
+        style="@style/Widget.AppCompat.AutoCompleteTextView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:background="@null"
+        android:ems="10"
+        android:gravity="start|top"
+        android:hint="Enter Details"
+        android:inputType="textMultiLine"
+        android:textColorHighlight="#FFFFFF"
+        android:textColorLink="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/noteTitle" />
 </androidx.constraintlayout.widget.ConstraintLayout>
