--- a/planesmith/app/src/main/res/layout/world_page.xml
+++ b/planesmith/app/src/main/res/layout/world_page.xml
@@ -17,13 +17,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:text="Story"
+            android:text="World"
             android:textColor="#000"
             android:textSize="25sp" />
     </RelativeLayout>
 
     <EditText
-        android:id="@+id/chapter_name"
+        android:id="@+id/world_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -38,7 +38,7 @@
         app:layout_constraintTop_toBottomOf="@+id/header" />
 
     <EditText
-        android:id="@+id/chapter_content"
+        android:id="@+id/world_content"
         style="@style/Widget.AppCompat.AutoCompleteTextView"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -56,5 +56,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/chapter_name" />
+        app:layout_constraintTop_toBottomOf="@+id/world_name" />
 </androidx.constraintlayout.widget.ConstraintLayout>
