--- a/planesmith/app/src/main/res/layout/story_add.xml
+++ b/planesmith/app/src/main/res/layout/story_add.xml
@@ -31,7 +31,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:ems="10"
-        android:hint="Enter Title"
+        android:hint="@string/chapter_name"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -50,7 +50,7 @@
         android:background="@null"
         android:ems="10"
         android:gravity="start|top"
-        android:hint="Enter Details"
+        android:hint="@string/chapter_content"
         android:inputType="textMultiLine"
         android:textColorHighlight="#FFFFFF"
         android:textColorLink="#FFFFFF"
