--- a/planesmith/app/src/main/res/layout/world_add.xml
+++ b/planesmith/app/src/main/res/layout/world_add.xml
@@ -17,7 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:text="World"
+            android:text="@string/world"
             android:fontFamily="sans-serif-smallcaps"
             android:textColor="#000"
             android:textSize="25sp" />
@@ -31,7 +31,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:ems="10"
-        android:hint="Enter Title"
+        android:hint="@string/world_name"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -50,7 +50,7 @@
         android:background="@null"
         android:ems="10"
         android:gravity="start|top"
-        android:hint="Enter Details"
+        android:hint="@string/world_details"
         android:inputType="textMultiLine"
         android:textColorHighlight="#FFFFFF"
         android:textColorLink="#FFFFFF"
